violating_resources/anthos-service-mesh/legacy/authentication-strict-mtls/samples/deprecated/policy-strict-constraint/example_disallowed_permissive.yaml
# "Policy" is deprecated: https://istio.io/latest/blog/2021/migrate-alpha-policy/
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: policy-permissive
  namespace: default
spec:
  peers:
    - mtls:
        mode: PERMISSIVE
