violating_resources/anthos-service-mesh/legacy/authentication-strict-mtls/samples/peerauthentication-strict-constraint/example_allowed.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mode-strict
  namespace: default
spec:
  mtls:
    mode: STRICT
