violating_resources/anthos-service-mesh/legacy/authentication-strict-mtls/samples/peerauthentication-strict-constraint/example_allowed_port_level_unset.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mode-strict-port-unset
  namespace: default
spec:
  mtls:
    mode: STRICT
  portLevelMtls:
    "8080":
      mode: UNSET
