violating_resources/anthos-service-mesh/legacy/authentication-strict-mtls/samples/peerauthentication-strict-constraint/example_disallowed_empty_mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: empty-mtls
  namespace: default
spec:
  mtls: {}
