violating_resources/anthos-service-mesh/legacy/authentication-strict-mtls/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: strictonly
tests:
  - name: peerauthenticationstrictonly
    template: template.yaml
    constraint: samples/peerauthentication-strict-constraint/constraint.yaml
    cases:
      - name: example-allowed
        object: samples/peerauthentication-strict-constraint/example_allowed.yaml
        assertions:
          - violations: no
      - name: empty-mtls
        object: samples/peerauthentication-strict-constraint/example_disallowed_empty_mtls.yaml
        assertions:
          - violations: yes
      - name: unspecified-mtls
        object: samples/peerauthentication-strict-constraint/example_disallowed_mtls_unspecified.yaml
        assertions:
          - violations: yes
      - name: null-mode
        object: samples/peerauthentication-strict-constraint/example_disallowed_null_mode.yaml
        assertions:
        - violations: yes
      - name: null-mtls
        object: samples/peerauthentication-strict-constraint/example_disallowed_null_mtls.yaml
        assertions:
        - violations: yes
      - name: permissive
        object: samples/peerauthentication-strict-constraint/example_disallowed_permissive.yaml
        assertions:
          - violations: yes
      - name: port-level-strict
        object: samples/peerauthentication-strict-constraint/example_allowed_port_level.yaml
        assertions:
          - violations: no
      - name: port-level-unset
        object: samples/peerauthentication-strict-constraint/example_allowed_port_level_unset.yaml
        assertions:
          - violations: no
      - name: port-level-permissive
        object: samples/peerauthentication-strict-constraint/example_disallowed_port_level_permissive.yaml
        assertions:
          - violations: yes
      - name: port-level-multiple
        object: samples/peerauthentication-strict-constraint/example_disallowed_multiple_port_level.yaml
        assertions:
          - violations: yes
  # The Istio v1alpha1 "Policy" resource is deprecated: https://istio.io/latest/blog/2021/migrate-alpha-policy/
  - name: policystrictonly-deprecated
    template: template.yaml
    constraint: samples/deprecated/policy-strict-constraint/constraint.yaml
    cases:
      - name: example-allowed
        object: samples/deprecated/policy-strict-constraint/example_allowed.yaml
        assertions:
          - violations: no
      - name: empty-mtls
        object: samples/deprecated/policy-strict-constraint/example_disallowed_empty_mtls.yaml
        assertions:
          - violations: yes
      - name: null-mtls
        object: samples/deprecated/policy-strict-constraint/example_disallowed_null_mtls.yaml
        assertions:
        - violations: yes
      - name: peers-empty
        object: samples/deprecated/policy-strict-constraint/example_disallowed_peers_empty.yaml
        assertions:
          - violations: yes
      - name: peers-unspecified
        object: samples/deprecated/policy-strict-constraint/example_disallowed_peers_unspecified.yaml
        assertions:
          - violations: yes
      - name: permissive
        object: samples/deprecated/policy-strict-constraint/example_disallowed_permissive.yaml
        assertions:
          - violations: yes
